--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 </p>
 
 <h2 id="contact-us">Contact Us:</h2>
-<p>Find us at:
+<p>The GreenVulcano Integration Platform is brought to you by <a href="http://www.greenvulcanotechnologies.com"><strong>GreenVulcano Technologies</strong></a></p>
+      <p>Find us at:
   <ul>
     <li>General Info: mailto:info@greenvulcano.com</li>
     <li>Development: mailto:sviluppo@greenvulcano.com</li>
