--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </ul>
 </p>
 
+<p><a href="https://github.com/green-vulcano/"><strong>Browse our repositories!</strong></a> (the main engine (<code>gvengine</code>) is <a href="https://github.com/green-vulcano/gv-engine">here</a>).</p>
+
 <h2 id="contact-us">Contact Us:</h2>
 <p>The GreenVulcano Integration Platform is brought to you by <a href="http://www.greenvulcanotechnologies.com"><strong>GreenVulcano Technologies</strong></a></p>
       <p>Find us at:
