--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </p>
 
 <h2 id="powered-by">Powered by:</h2>
-<p><img src="karaf-logo.png" width="300px" /> <img src="logo_IntelliJIDEA.png" width="300px" /></p>
-
+      <p><a href="http://karaf.apache.org/"><img src="karaf-logo.png" width="300px" /></a>
+	 <a href="https://www.jetbrains.com/idea/"><img src="logo_IntelliJIDEA.png" width="300px" /></a></p>
     </div>
   </body>
 </html>
